--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -66,4 +66,7 @@ server:
 
 logging:
   level:
-    org.springframework.security: trace
+    root: INFO
+    org.springframework.web: DEBUG
+    org.springframework.security: DEBUG
+    org.springframework.security.oauth2: DEBUG
