--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -61,12 +61,17 @@ spring:
             user-info-uri: https://openidconnect.googleapis.com/v1/userinfo
             jwk-set-uri: https://www.googleapis.com/oauth2/v3/certs
             user-name-attribute: sub
+  datasource:
+    url: jdbc:mysql://127.0.0.1:3306/gameusd-snapshot?serverTimezone=GMT%2B8&useSSL=false&useUnicode=true&characterEncoding=utf-8&allowPublicKeyRetrieval=true&useAffectedRows=true
+    username: root
+    password: 12345678
+    driver-class-name: com.mysql.cj.jdbc.Driver
 server:
   port: 9000
-
 logging:
   level:
     root: INFO
     org.springframework.web: DEBUG
     org.springframework.security: DEBUG
     org.springframework.security.oauth2: DEBUG
+    com.chz.mapper: DEBUG
