feat: 天æ添加呕OAuth2相关脚本

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -62,7 +62,7 @@ spring:
             jwk-set-uri: https://www.googleapis.com/oauth2/v3/certs
             user-name-attribute: sub
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/gameusd-snapshot?serverTimezone=GMT%2B8&useSSL=false&useUnicode=true&characterEncoding=utf-8&allowPublicKeyRetrieval=true&useAffectedRows=true
+    url: jdbc:mysql://127.0.0.1:3306/oauth2?serverTimezone=GMT%2B8&useSSL=false&useUnicode=true&characterEncoding=utf-8&allowPublicKeyRetrieval=true&useAffectedRows=true
     username: root
     password: 12345678
     driver-class-name: com.mysql.cj.jdbc.Driver
